# transformer-attention-with-hdc-binding

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: SETUP.md
docs/diagrams/: ExperimentClassDiagram.html  Project_Diagrams.html
docs/experiment_metrics/: README.md
docs/experiment_metrics/binding_N_L_4/: dataset_results.csv  metrics_binding_N_l_4.csv  model_metrics_binding_N_l_4.csv  trial_metrics_binding_N_l_4.csv
docs/experiment_metrics/binding_version_1/: dataset_results.csv  metrics_binding_version_1.csv  model_metrics_binding_version_1.csv  trial_metrics_binding_version_1.csv
docs/experiment_metrics/pe_version_1/: experiment_results.csv
docs/experiment_results/: README.md
docs/experiment_results/1_binding_version_1/: README.md  aggregated_by_dataset_metrics_binding_version_1.csv  experiment_config.json  metrics_binding_version_1.csv  summary_dataset_results.csv  summary_model_metrics_binding_version_1.csv
docs/experiment_results/2_N_L_version_1/: aggregated_by_dataset_metrics_N_L_version_1.csv  experiment_config.json  metrics_N_L_version_1.csv  summary_dataset_results.csv  summary_model_metrics_N_L_version_1.csv
docs/experiment_results/2_binding_N_L_4/: summary_dataset_results.csv
docs/experiment_results/3_d_model_v1/: aggregated_by_dataset_metrics_d_model_v1.csv  summary_dataset_results.csv  summary_model_metrics_d_model_v1.csv
docs/experiment_results/3_pe_version_1/: aggregated_by_dataset_metrics_pe_version_1.csv  experiment_config.json  summary_dataset_results.csv  summary_model_metrics_pe_version_1.csv
docs/experiment_results/4_a_pe_version_1/: aggregated_by_dataset_metrics_pe_a_version_1.csv  experiment_config.json  metrics_pe_a_version_1.csv  summary_dataset_results.csv  summary_model_metrics_pe_a_version_1.csv
docs/experiment_results/4_comp_wise_pe_version_1/: experiment_config.json  summary_dataset_results.csv  summary_model_metrics_pe_a_version_1.csv
docs/experiment_results/4_conv_pe_version_1/: experiment_config.json  summary_dataset_results.csv
docs/experiment_results/4_pe_version_1/: aggregated_by_dataset_metrics_pe_version_1.csv  metrics_pe_version_1.csv  summary_dataset_results.csv  summary_model_metrics_pe_version_1.csv
docs/experiment_results/4_sota_version_1/: aggregated_by_dataset_metrics_sota_version_1.csv  experiment_config.json  metrics_sota_version_1.csv
docs/experiment_results/5_d_model_v1/: experiment_config.json  metrics_d_model_v1.csv  summary_dataset_results.csv  summary_model_metrics_d_model_v1.csv
docs/experiment_results/5_sota_version_1/: aggregated_by_dataset_metrics_sota_version_1.csv  experiment_config.json  metrics_sota_version_1.csv  summary_dataset_results.csv  summary_model_metrics_sota_version_1.csv
docs/experiment_results/6_paper_pe_version_1/: aggregated_by_dataset_metrics_pe_version_1.csv  metrics_pe_version_1.csv  summary_dataset_results.csv  summary_model_metrics_pe_version_1.csv
docs/experiment_results/binding_N_L_4/: aggregated_by_dataset_metrics_binding_N_l_4.csv  dataset_results.csv  experiment_config.json  experiment_results.csv  metrics_binding_N_l_4.csv  model_metrics_binding_N_l_4.csv  summary_model_metrics_binding_N_l_4.csv  trial_metrics_binding_N_l_4.csv
docs/experiment_results/binding_version_1/: dataset_results.csv  experiment_config.json  experiment_results.csv  model_metrics_binding_version_1.csv  trial_metrics_binding_version_1.csv
docs/experiment_results/pe_version_1/: aggregated_by_dataset_metrics_pe_version_1.csv  dataset_results.csv  experiment_config.json  model_metrics_pe_version_1.csv  summary_model_metrics_pe_version_1.csv  trial_metrics_pe_version_1.csv
docs/experiment_results/sota_version_1/: README.md  aggregated_by_dataset_metrics_sota_version_1.csv  aggregated_metrics_sota_version_1.csv  dataset_results.csv  experiment_results.csv  metrics_sota_version_1.csv  model_metrics_sota_version_1.csv  summary_dataset_results.csv  summary_model_metrics_sota_version_1.csv  trial_metrics_sota_version_1.csv
docs/insights/: README.md
docs/metrics/binding_methods/: README.md
docs/plots/insights/: README.md
scripts/: backend_verification.py  install.sh  setup_cuda_server.sh
server/: setup.sh
src/experiment_framework/: __init__.py  data_factory.py  dataset.py  experiment_config.py  experiment_config_factory.py  experiment_runner.py  model_cfg_factory.py
src/experiment_framework/config/: dataset.py  experiment.py  experiment_factory.py  model.py  model_factory.py
src/experiment_framework/data/: datamodule.py  factory.py  preprocessing.py  ucr_loader.py  visualization.py
src/experiment_framework/runner/: error_handler.py  metrics_handler.py  runner.py
src/experiments/: ConvTran_results.json  README.md  __init__.py  aggregate_metrics.py  data_factory.py  experiment_config.py  experiment_runner.py  model_config.py
src/experiments/pe_visualization/: README.md  d_model_experiment.py  layer_visualizations.py  n_l_experiment.py  similarity_visualization.py  ts_pe_visualization.py
src/experiments/positional_encodings/: README.md  similarity_visualization.py  ts_pe_visualization.py
src/experiments/time_series/: README.md  dataset.py  experiment_cfg.json  feature_embedder.py  models_cfg.json  run.py  standard_scaler.py  train.py  ts_pe_visualization.py
src/experiments/visualization/: README.md  binding.py  cd_diagram.py  d_model_experiment.py  metrics.py  n_l_experiment.py  paper.py  positional_encoding.py  similarity_shapes.py  test.txt  vis_config.py
src/models/: __init__.py  arg_formatter.py  base_model.py  factory.py  model_factory.py  pocket_algorithm.py
src/models/architectures/: time_series_classifier.py
src/models/binding/: __init__.py  additive.py  convolutional.py  factory.py  multiplicative.py
src/models/binding_method/: __init__.py  additive.py  basic.py  binding_factory.py  binding_method_factory.py  convolutional.py  (+1 more)
src/utils/: __init__.py  base_config.py  cache_cleaner.py  config.py  experiment_config_factory.py  log.py  plot.py
(+119 files in other folders)
