[project]
name = "utils"
version = "0.1.0"
description = "Project utilities"
authors = [
    {name = "josejuan98"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.2.3)",
    "torch (>=2.6.0)",
    "lightning (>=2.5.0)",
    "torchmetrics (>=1.6.2)",
    "tensorboard (>=2.19.0)",
    "matplotlib (>=3.10.1)",
    "seaborn (>=0.13.2)"
]

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
flake8 = ">=7.1.2"
isort = ">=6.0.1"
deptry = ">=0.23.0"
mypy = ">=1.15.0"
pydocstyle = ">=6.3.0"
pre-commit = ">=4.1.0"
pytest = ">=8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vvv -s --color=yes --code-highlight=yes -p no:warnings"
testpaths = [
    "src/test"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
known_pytest = ["pytest"]
sections = ["FUTURE", "PYTEST", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_future = "Future imports"
import_heading_pytest = "Pytest imports"
import_heading_stdlib = "Standard imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "First party imports"
import_heading_localfolder = "Local imports"

[tool.pydocstyle]
inherit = false
ignore = ["D104","D107","D202","D203","D213","D214","D400","D401","D404","D406","D407","D411","D413","D141","D415","D417"]

[tool.deptry.per_rule_ignores]
DEP002 = ["torch", "torchmetrics", "lightning", "tensorboard", "matplotlib", "seaborn", "numpy"]
DEP004 = ["pytest"]
